# pure-json

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pure_json/: __init__.py  core.py  exceptions.py  extractor.py  healer.py
tests/: test_pure_json.py
