[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-json"
version = "0.1.1"
authors = [
  { name="Roman Kazi" },
]
description = "A zero-dependency middleware to extract, clean, and heal JSON from messy LLM outputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Roman-kazi/pure-json"
"Bug Tracker" = "https://github.com/Roman-kazi/pure-json/issues"
